major rewrite of cmake files
Includes:
- use of global vars for more flexible handling of paths
- build ismrmrd_xsd library from xsd sources
- install still provides both the generated xsd source files in schema/
  and additionally the ismrmrd_xsd library in lib/
- on Windows, binaries are still generated using the xsd sources
- on OSX / Linux, binaries are linked with ismrmrd_xsd instead

--- a/bindings/java/CMakeLists.txt
+++ b/bindings/java/CMakeLists.txt
@@ -33,9 +33,12 @@ add_custom_command(
 )
 add_custom_target(ismrmrdjar ALL DEPENDS ${JAVA_OUTPUTS})
 
-install(TARGETS jismrmrd DESTINATION java)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ismrmrd.jar DESTINATION java)
+install(TARGETS jismrmrd
+    DESTINATION ${ISMRMRD_INSTALL_JAVA_DIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ismrmrd.jar
+    DESTINATION ${ISMRMRD_INSTALL_JAVA_DIR})
 
 # Note: the API documentation is only for the XML header, and is installed
 # in ${INSTALL_PREFIX}/matlab/doc
-install(DIRECTORY ${JAVADOC_OUTPUT} DESTINATION matlab)
+install(DIRECTORY ${JAVADOC_OUTPUT}
+    DESTINATION ${ISMRMRD_INSTALL_MATLAB_DIR})
