--- a/tests/c/CMakeLists.txt
+++ b/tests/c/CMakeLists.txt
@@ -1,10 +1,11 @@
 enable_testing()
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../..)
+include_directories(${ISMRMRD_SOURCE_DIR})
 
 add_executable(t_cstructs t_cstructs.cpp)
 add_test(t_cstructs ${CMAKE_CURRENT_BINARY_DIR}/t_cstructs)
 
-add_executable(t_cquaternions ../../ismrmrd.h t_cquaternions.cpp)
+#add_executable(t_cquaternions ../../ismrmrd.h t_cquaternions.cpp)
+add_executable(t_cquaternions t_cquaternions.cpp)
 add_test(t_cquaternions ${CMAKE_CURRENT_BINARY_DIR}/t_cquaternions)
 
 if (NOT WIN32)
