--- a/xml/CMakeLists.txt
+++ b/xml/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(test_ismrmrd_xml
 target_link_libraries(test_ismrmrd_xml
   ismrmrd_xml)
 
-install (FILES ismrmrd_xml.h
+install (FILES ismrmrd_xml.h ismrmrd_xml_export.h
   DESTINATION ${ISMRMRD_INSTALL_INCLUDE_DIR})
 
 install (TARGETS ismrmrd_xml DESTINATION ${ISMRMRD_INSTALL_LIB_DIR})
