--- a/xml/CMakeLists.txt
+++ b/xml/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(ismrmrd_xml SHARED 
   ismrmrd_xml.h
   ismrmrd_xml.cpp
+  ismrmrd_meta.h
+  ismrmrd_meta.cpp
   pugixml.cpp
   )
 
@@ -9,7 +11,14 @@ add_executable(test_ismrmrd_xml
   pugixml.cpp
 )
 
+add_executable(test_meta 
+  test_meta.cpp
+)
+
 target_link_libraries(test_ismrmrd_xml
+  ismrmrd_xml)
+
+target_link_libraries(test_meta
   ismrmrd_xml)
 
 install (FILES ismrmrd_xml.h ismrmrd_xml_export.h
