Forcing HDF calls to adhere to the 1.8 syntax.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,10 +30,7 @@ else (WIN32)
 endif (WIN32)
 
 # required packages for main library
-find_package(HDF5 1.8 COMPONENTS C HL REQUIRED)
-
-# use only the HDF5 1.8 API (H5Gcreate2)
-add_definitions(-DH5_NO_DEPRECATED_SYMBOLS)
+find_package(HDF5 1.8 COMPONENTS C REQUIRED)
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
