--- a/xml/CMakeLists.txt
+++ b/xml/CMakeLists.txt
@@ -21,7 +21,7 @@ target_link_libraries(test_ismrmrd_xml
 target_link_libraries(test_meta
   ismrmrd_xml)
 
-install (FILES ismrmrd_xml.h ismrmrd_xml_export.h
+install (FILES ismrmrd_xml.h ismrmrd_xml_export.h ismrmrd_meta.h 
   DESTINATION ${ISMRMRD_INSTALL_INCLUDE_DIR})
 
 install (TARGETS ismrmrd_xml DESTINATION ${ISMRMRD_INSTALL_LIB_DIR})
